sendGrid mail implementationa and removed  raw smtp

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,6 +90,7 @@
 		</dependency>
 
 
+
 		<!-- OAuth2 Client -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -101,6 +102,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.10.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk18on</artifactId>
+			<version>1.78.1</version>
+		</dependency>
+
+
 
 		<!-- Security crypto (PasswordEncoder, BCrypt) -->
 		<dependency>
